0.7.6  - Item is not stored in Container anymore  - ItemPlaced is not stored in Item anymore